<resources>
    <string name="app_name">V2EX</string>
    <string name="hello_world">Hello world!</string>
    <string name="settings">Settings</string>
    <string name="title">title</string>
    <string name="it_is_avatar">It is avatar</string>
    <string name="menu_refresh">Refresh</string>
    <string name="error_timeout">error timeout</string>
    <string name="error_auth_failure">auth failure</string>
    <string name="error_network">error network</string>
    <string name="error_parser">error parse</string>
    <string name="title_activity_details">Details</string>
    <string name="author">Author</string>
    <string name="content">Content, For change line I have to do a lot of things, please hurt me</string>
    <string name="node">Node</string>
    <string name="menu_share">Share</string>
    <string name="title_activity_settings">Settings</string>
    <string name="reply_time">Time</string>
    <string name="row">n row</string>
    <string name="reply">Reply</string>
    <string name="send">Send</string>
    <string name="sending">Sending…</string>
    <string name="reply_input_hint">Write a reply</string>
    <string name="title_activity_login">Login</string>
    <string name="account">Account</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="authenticating">Authenticating…</string>
    <string name="title_activity_nav_drawer">NavDrawer</string>
    <string name="tab_title_latest">New</string>
    <string name="tab_title_top10">Top 10</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="register_tip">Sign up</string>
    <string name="feature">feature</string>
    <string name="communicate">Communicate</string>
    <string name="feedback">Feedback</string>
    <string name="rate">Rate app</string>
    <string name="other">Other</string>
    <string name="general">General</string>
    <string name="just_now">just</string>
    <string name="menu_open_in_browser">Open in browser</string>
    <string-array name="period_string">
        <item>15 Minutes</item>
        <item>30 Minutes</item>
        <item>1 Hour</item>
        <item>3 Hours</item>
    </string-array>
    <string-array name="period_int">
        <item>900</item>
        <item>1800</item>
        <item>3600</item>
        <item>10800</item>
    </string-array>
    <string-array name="text_size">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string-array name="text_size_string">
        <item>Follow System</item>
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
        <item>Super Large</item>
    </string-array>
    <string-array name="night_mode_string">
        <item>Dark Mode</item>
        <item>Light Mode</item>
        <item>System Default</item>
    </string-array>
    <string name="follow_system">Follow System</string>
    <string-array name="language_string" translatable="false">
        <item>@string/follow_system</item>
        <item>English</item>
        <item>简体中文</item>
        <item>繁體中文</item>
    </string-array>
    <string-array name="language_value" translatable="false">
        <item>default</item>
        <item>en</item>
        <item>zh_CN</item>
        <item>zh_TW</item>
    </string-array>
    <string-array name="night_mode">
        <item>2</item>
        <item>1</item>
        <item>-1</item>
    </string-array>
    <string-array name="search_option" >
        <item>Latest</item>
        <item>Earliest</item>
        <item>Hottest</item>
    </string-array>
    <string name="title_activity_node">Node</string>
    <string name="node_image" translatable="false">node image</string>
    <string name="search_hint">Search …</string>
    <string name="title_activity_fullscreen" translatable="false">FullscreenActivity</string>
    <string name="share_app">Share app</string>
    <string name="share_to">Share to</string>
    <string name="feedback_hint">Please input your idea or recommendation below.\n</string>
    <string name="send_email">Send feedback mail…</string>
    <string name="feedback_subject" translatable="false">Feedback for v2ex-simple</string>
    <string name="email">Email</string>
    <string name="thanks">Thanks</string>
    <string name="show_thanks">♥ %d</string>
    <string name="profile">profile</string>
    <string name="log_in_v2ex">Log in V2EX</string>
    <string name="app_simple_name">V2EX</string>
    <string name="created_on">Created on</string>
    <string name="introduction">Introduction</string>
    <string name="the_n_member">the %s member</string>
    <string name="topic_number">Topic num %d</string>
    <string name="daily_check">Daily check</string>
    <string name="logout">Logout</string>
    <string name="all_nodes">All nodes</string>
    <string name="post_reply">send reply</string>
    <string name="user">User</string>
    <string name="choose_node">Please choose node</string>
    <string name="close">Close</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="notification">Notification</string>
    <string name="settings_logout_confirm_title">Confirmation</string>
    <string name="settings_logout_confirm_message">Are you sure you want to log out?</string>
    <string name="settings_logout_success">Logged out</string>
    <string name="copy_content">Copy content</string>
    <string name="create_topic">Create topic</string>
    <string name="you_have_notifications">it is %d unread message</string>
    <string name="favor">Favor</string>
    <string name="my_follow">My follows</string>
    <string name="unFavor">Unfavor</string>
    <string name="new_topic">New topic</string>
    <string name="follow">Follow</string>
    <string name="block">Block</string>
    <string name="no_more_data">no more data</string>
    <string name="verify_code">code</string>
    <string name="indicator">indicator</string>
    <string name="show_user_all_reply">Show user all replies</string>
    <string name="already_thank">thanked</string>
    <string name="ignore">Ignore topic</string>
    <string name="already_ignore">Cancel ignore</string>
    <string name="google_login">Sign in With Google</string>
    <string name="tab_setting">Tab Setting</string>
    <string name="need_at_least_one">You need remain at least one tab</string>
    <string name="show_area">Show area</string>
    <string name="hide_area">Hide area</string>
    <string name="menu_reset">Reset</string>
    <string name="menu_save">Save</string>
    <string name="search">Search</string>
    <string name="search_history_title">Search history</string>
    <string name="search_history_clear_all">Clear all</string>
    <string name="search_history_empty">No recent searches</string>
    <string name="search_history_delete">Delete search history item</string>
    <string name="search_clear_node_filter">Clear node filter</string>
    <string name="there_is_no_app_store">No App Store found in your phone</string>
    <string name="font_size">Font size</string>
    <string name="swipe_to_switch_topic">Swipe to switch topic</string>
    <string name="dark_mode">Dark mode</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="version">Version</string>
    <string name="iknow">I know</string>
    <string name="search_api_tips">Search API Tips</string>
    <string name="search_api_notice">1. This search API comes from the open-source project https://www.sov2ex.com\n2. Results are sorted by newest by default</string>
    <string name="tips_tab_setting">Tips:\nIf logged in , it will show Node that you favored. Long press to reorder</string>
    <string name="light_mode">Light mode</string>
    <string name="use_device_setting">System default</string>
    <string name="tips">Tips</string>
    <string name="not_login_tips">Please log in to continue</string>
    <string name="show_conversation">Show conversations</string>
    <string name="personalization">Personalization</string>
    <string name="message">Message</string>
    <string name="unread_message_notification">Unread message notification</string>
    <string name="notification_period">Notification period</string>
    <string name="get_message_background">Fetch notification when background</string>
    <string name="add_row_in_reply">Add row in reply</string>
    <string name="format_user_n">Format: @user #n</string>
    <string name="format_user">Format: @user</string>
    <string name="hide_reply">Hide</string>
    <string name="report_abuse">Report</string>
    <string name="language">Language</string>
    <string name="please_input_content">Input topic content…</string>
    <string name="topic_title">Topic title</string>
    <string name="please_input_key_to_search">Input keywords to search</string>
    <string name="search_no_results">No results found. Try another query.</string>
    <string name="search_no_more_results">No more results</string>
    <string name="theme_background">Theme</string>
    <string name="pagenummode">Page number mode</string>
    <string name="show_pagenum_on">Show page number in favor and user page</string>
    <string name="show_pagenum_off">Hide page number in favor and user page</string>
    <string name="cancel_block">Unblock</string>
    <string name="unfollow">Unfollow</string>
    <string name="sort_mode">Sort mode</string>
    <string name="gte">Earliest posting</string>
    <string name="lte">Latest posting</string>
    <string name="newest">Newest</string>
    <string name="hot">Hot</string>
    <string name="dark_mode_darker">More Darker Mode</string>
    <string name="dark_mode_color">Dark mode color</string>
    <string name="normal_dark">Normal Dark</string>
    <string name="super_dark">Super Dark</string>
    <string name="topic_action_back">Back</string>
    <string name="topic_action_more">More</string>
    <string name="topic_block_success">Blocked successfully</string>
    <string name="topic_unblock_success">Unblocked successfully</string>
    <string name="topic_loading">Loading…</string>
    <string name="topic_floor_format">#%1$d</string>
    <string name="topic_op_badge">OP</string>
    <string name="topic_select_reason">Please select a reason</string>
    <string name="topic_conversation_title">Conversation</string>
    <string name="topic_error_open">Unable to open this topic</string>
    <string name="topic_error_load_more_replies">Failed to load more replies</string>
    <string name="topic_error_action_retry_refresh">Operation failed. Please refresh and try again</string>
    <string name="topic_favor_success">Added to favorites</string>
    <string name="topic_unfavor_success">Removed from favorites</string>
    <string name="topic_favor_failed">Favorite action failed</string>
    <string name="topic_thank_success">Thanks sent</string>
    <string name="topic_thank_failed">Failed to send thanks</string>
    <string name="topic_block_failed">Block action failed</string>
    <string name="topic_share_text">Shared from V2EX: %1$s\n%2$s</string>
    <string name="topic_reply_send_failed_refresh">Failed to send. Please refresh and try again</string>
    <string name="topic_reply_post_success">Reply posted</string>
    <string name="topic_reply_post_failed">Failed to post reply</string>
    <string name="topic_refresh_retry">Please refresh and try again</string>
    <string name="topic_hide_success">Reply hidden</string>
    <string name="topic_hide_failed">Failed to hide reply</string>
    <string name="topic_report_submitted">Report submitted to moderators</string>
    <string name="topic_error_retry">Something went wrong. Please try again</string>
    <string name="topic_report_topic_template">This topic involves %1$s @Livid</string>
</resources>