<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/coordinator"
    android:background="?attr/colorSurface"
    >

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:background="?attr/colorSurface"
        android:elevation="4dp"
        android:clipToPadding="false"
        android:clipChildren="false"
        app:liftOnScroll="false"
        app:statusBarForeground="?attr/colorSurface"
        android:stateListAnimator="@null"
        tools:ignore="UnusedAttribute">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorSurface"
            app:titleTextAppearance="@style/VText.ToolbarStyle"
            android:contentDescription="@string/title"
            app:contentInsetStartWithNavigation="0dp"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:background="?attr/colorSurface">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_main_tabs"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:overScrollMode="never"
                android:clipToPadding="false"
                android:layout_marginStart="8dp"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/chip_tab_add"
                style="@style/Widget.V2ex.Button.TabAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:contentDescription="@string/tab_setting"
                app:icon="@drawable/ic_add_white_24dp" />

        </LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>


    <!--if not contain layout_behavior,it shows buggy-->
    <androidx.viewpager2.widget.ViewPager2
        android:contentDescription="@string/content"
        android:id="@+id/viewpagerMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="@dimen/fab_margin"
        android:contentDescription="add topic"
        android:scaleType="fitXY"
        android:src="@drawable/ic_edit_white_24dp"
        app:backgroundTint="?attr/colorSecondaryContainer"
        app:elevation="8dp"
        app:fabSize="normal"
        tools:ignore="ImageContrastCheck" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>
